<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dice Statistics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_dice_color">Dice Color</string>
    <string name="dice_color_red">Red</string>
    <string name="dice_color_green">Green</string>
    <string name="dice_color_cyan">Cyan</string>
    <string name="dice_color_blue">Blue</string>
    <string name="dice_color_purple">Purple</string>
    <string name="dice_color_black">Black</string>
    <string name="action_about">About</string>
    <string name="calculate_button">Calculate</string>
    <string name="clear_button">Clear</string>
    <string name="d4_spinner">d4</string>
    <string name="d6_spinner">d6</string>
    <string name="d8_spinner">d8</string>
    <string name="d10_spinner">d10</string>
    <string name="d12_spinner">d12</string>
    <string name="d20_spinner">d20</string>
    <string name="desc"> </string>
    <string name="modifier_str">Modifier = </string>
    <string name="modifier_hint">Enter Modifier</string>
    <string name="goal_str">Goal = </string>
    <string name="goal_hint">Enter Goal</string>
</resources>
