<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <!-- d4 image -->
        <ImageView
            android:id="@+id/d4_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d4_cyan"
            android:layout_weight="1"
            android:contentDescription="@string/desc"/>

        <!-- d6 image -->
        <ImageView
            android:id="@+id/d6_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d6_cyan"
            android:layout_weight="1"
            android:contentDescription="@string/desc"/>

        <!-- d8 image -->
        <ImageView
            android:id="@+id/d8_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d8_cyan"
            android:layout_weight="1"
            android:contentDescription="@string/desc"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <!-- d4 spinner -->
        <Spinner
            android:id="@+id/d4_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <!-- d6 spinner -->
        <Spinner
            android:id="@+id/d6_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <!-- d8 spinner -->
        <Spinner
            android:id="@+id/d8_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <!-- d10 image -->
        <ImageView
            android:id="@+id/d10_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d10_cyan"
            android:layout_weight="1"
            android:contentDescription="@string/desc"/>

        <!-- d12 image -->
        <ImageView
            android:id="@+id/d12_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d12_cyan"
            android:layout_weight="1"
            android:contentDescription="@string/desc"/>

        <!-- d20 image -->
        <ImageView
            android:id="@+id/d20_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d20_cyan"
            android:layout_weight="1"
            android:contentDescription="@string/desc"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <!-- d10 spinner -->
        <Spinner
            android:id="@+id/d10_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <!-- d12 spinner -->
        <Spinner
            android:id="@+id/d12_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <!-- d20 spinner -->
        <Spinner
            android:id="@+id/d20_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/modifier_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/main_modifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/modifier_hint"
            android:layout_weight="1"
            android:selectAllOnFocus="true" />
        </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <TextView
            android:text="@string/goal_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/main_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:hint="@string/goal_hint"
            android:layout_weight="1"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:context=".MainActivity">

    <!-- Button to Calculate the Dice Statistics -->
        <Button
            android:id="@+id/calc_button"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/calculate_button"/>

    <!-- Button to Clear the input Spinners -->
        <Button
            android:id="@+id/clear_button"
            android:background="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/clear_button" />
    </LinearLayout>
</LinearLayout>
